--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ target_link_libraries(${PROJECT_NAME}
     FreeRTOS-Kernel-Heap4
     pico_cyw43_arch_lwip_threadsafe_background
     hardware_pwm
+    hardware_adc
 )
 
 # --- Enable USB output, disable UART ---
